// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`html plugin should not collect empty \`src\` attributes as assets 1`] = `
Object {
  "diagnostics": Array [],
  "entry": "/index.html",
  "files": Object {
    "/index.html": Object {
      "content": "
          <img src=\\"\\" /> 
          <img src= >
        ",
    },
  },
}
`;

exports[`html plugin should trim asset paths 1`] = `
Object {
  "diagnostics": Array [],
  "entry": "/index.html",
  "files": Object {
    "/index.html": Object {
      "content": "
|tape-dependency          <img src=\\"     my-image.png     \\" /> 
        ",
    },
    "my-image.png": Object {
      "content": "link to image",
    },
  },
}
`;
